# hdisk

./: Cargo.toml  LICENSE  README.md
scripts/: install.bat  install.sh
src/: device.rs  lib.rs  main.rs  partition.rs  ui.rs
tests/: integration_tests.rs
