[package]
name = "hdisk"
version = "0.1.0"
edition = "2021"
authors = ["person134"]
description = "A cross-platform block device viewer and partition manager."
license = "MIT"
repository = "https://github.com/person134/hdisk.git"
readme = "README.md"
keywords = ["disk", "partition", "lsblk", "storage", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
colored = "2.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
